--- a/Tron/contracts/package.json
+++ b/Tron/contracts/package.json
@@ -1,21 +1,31 @@
 {
   "name": "contracts",
   "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "build": "hardhat compile",
+    "test": "hardhat test",
+    "deploy": "hardhat run scripts/deploy-complete-stack.js",
+    "deploy:sepolia": "hardhat run scripts/deploy-complete-stack.js --network sepolia",
+    "deploy:celo": "hardhat run scripts/deploy-complete-stack.js --network celo",
+    "verify": "hardhat verify"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
     "@nomicfoundation/hardhat-ethers": "^3.1.0",
-    "@nomicfoundation/hardhat-ignition": "^0.15.13",
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.14",
-    "@nomicfoundation/hardhat-network-helpers": "^1.1.0",
-    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
-    "@nomicfoundation/hardhat-verify": "^2.1.1",
-    "@typechain/ethers-v6": "^0.5.1",
-    "@typechain/hardhat": "^9.1.0",
-    "chai": "^4.5.0",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@openzeppelin/contracts": "^5.4.0",
     "ethers": "^6.15.0",
     "hardhat": "^2.26.3",
-    "hardhat-gas-reporter": "^2.3.0",
-    "solidity-coverage": "^0.8.16",
-    "typechain": "^8.3.2"
+    "zksync-ethers": "^6.21.0"
+  },
+  "dependencies": {
+    "@1inch/limit-order-protocol-contract": "github:1inch/limit-order-protocol",
+    "dotenv": "^16.6.1",
+    "tronbox": "^4.3.0",
+    "tronweb": "^6.0.4"
   }
 }
